* RoomTransition:
	- Fixed StartBossIntro crash on call if room index for room transition is invalid.
* ModCallbacks:
	- Fixed returning false on MC_PRE_PLAYER_ADD_CARD/PILL not preventing the card/pill being added as intended.
* XMLData:
	- Fixed an isue with ModData not displaying the extra REPENTOGON attributes (enabled/fulldirectory/etc)
/newline/
Modified:
* EntityFamiliar:
	- GetPathFinder -> GetPathfinder
* EntityPlayer:
	- DropCollectible now returns the spawned pedestal if one was spawned, as intended 
	- SwapForgottenForm returns boolean, depending if Forgotten/Soul form was switched or not.
* Level:
	- TryPlaceRoom(AtDoor) no longer plays the key unlock sound if a room is created that connects to the player's current room.
* ImGui:
	- Adding an element with the same id as an existing one will now replace the existing element instead of throwing an error.
	- If an error is caused by a callback, imgui will now properly throw an error
* ModCallbacks:
	- MC_POST_PLAYER_TRIGGER_EFFECT_REMOVED(EntityPlayer Player, int Count)
		Added Count argument (how many instances of this effect were removed)
	- MC_PRE_MOD_UNLOAD(Mod, bool ShuttingDown)
		Added boolean argument that identifies if it is running due to game shutdown
		Now runs earlier during shutdown, so code is less likely to crash
	- MC_POST_CURSE_EVAL
		Returning a value will now pass the modified curse mask along to the next callback instead of ending the callback early.
* reloadshaders command will now reload custom anm2 shaders
* Vanilla daily run leaderboard will now mark the submitted run entry with a transparent color if the run was cheated.
* Daily goal path icon will now be displayed on Mega Satan daily runs.
Fixes:
* ImGui:
	- Fixed RemoveElement not working on elements created with AddInputColor.
	- Fixed Render callbacks of window elements being executed even if the window is not visible
	- Fixed ImGui closing unexpectedly when pressing enter and the console window is not enabled